<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--mainactivity.xml-->
    <string name="app_name">Educational Quiz</string>
    <string name="welcoming">Welcome</string>
    <string name="name_input">Please Enter Your Name</string>
    <string name="start">Start</string>
    <string name="first_q">(1) Which country has the largest population in the world?</string>
    <string name="india">India</string>
    <string name="usa">USA</string>
    <string name="china">China</string>
    <string name="brazil">Brazil</string>
    <string name="second_q">(2) What is the longest river in the world?</string>
    <string name="mississippi">Mississippi</string>
    <string name="nile">Nile</string>
    <string name="amazon">Amazon</string>
    <string name="congo">Congo</string>
    <string name="third_q">(3) The Great Pyramid of Giza is one of the ancient Seven Wonders of the World, in which country is it located?</string>
    <string name="fourth_q">(4) Which two of the below countries have French as an official language?</string>
    <string name="belgium">Belgium</string>
    <string name="algeria">Algeria</string>
    <string name="austria">Austria</string>
    <string name="djibouti">Djibouti</string>
    <string name="fifth_q">(5) What is the most spoken language in the world?</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="arabic">Arabic</string>
    <string name="sixth_q">(6) In which country is the Bosphorus bridge whick links Europe and Asia?</string>
    <string name="score">Score</string>
    <string name="check_answers">Check the right answers  >></string>

    <!--activity2.xml-->
    <string name="first_a">(1) According to 2017 statistics, China has the world’s largest population (1.39 billion), followed by India (1.34 billion), followed by USA (326 million).</string>
    <string name="second_a">(2) The Nile is a major north-flowing river in northeastern Africa, generally regarded as the longest river in the world. It is 6,650 km (4,130 miles) long and runs through the ten countries of Sudan, South Sudan, Burundi, Rwanda, Democratic Republic of the Congo, Tanzania, Kenya, Ethiopia, Uganda and Egypt.</string>
    <string name="third_a">(3) The Great Pyramid of Giza is located in Egypt, it is the oldest monument on the list of the Seven Wonders of the Ancient World. It is also the only one left standing. It is a marvel of human engineering and construction, and its sheer size and scale rivals any structure built within the last few hundred years. Its construction, though, has always been the subject of much debate among scholars, because of its massive size and near perfect proportions.</string>
    <string name="fourth_a">(4) While French is spoken by a significant part of the population of about 60 countries, it is only recognized as an official language by 29 countries including Belgium and Djibouti.</string>
    <string name="fifth_a">(5) Almost half of the world’s population claim one of only ten languages as their mother tongue. Chinese comes on the top of the 10 languages, it is spoken by almost 1.2 billion native speakers, it is a language that a language that one in six people in the world speak.</string>
    <string name="sixth_a">(6) The Bosphorus Bridge is located in Turkey, it is one of two bridges that spans the Bosphorus Strait, connecting the European and Asian sides of Istanbul. At 1560 meters long, the Bosphorus Bridge was the fourth longest suspension bridge in the world when it opened in 1973 and was the first bridge to connect Europe and Asia since a bridge spanning the Dardanelles in 480 B.C. Today, it is the 21st longest suspension bridge in the world.</string>


    <!--MainActivity.java-->
    <string name="hey">Hey &#160; </string>
    <string name="no_answer">, you did not answer number </string>

</resources>
