<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/quiz" />

            <TextView
                android:id="@+id/score_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/welcoming"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first"
                style="@style/answers"
                android:text="@string/first_a" />

            <TextView
                android:id="@+id/second"
                style="@style/answers"
                android:text="@string/second_a" />

            <TextView
                android:id="@+id/third"
                style="@style/answers"
                android:text="@string/third_a" />

            <TextView
                android:id="@+id/fourth"
                style="@style/answers"
                android:text="@string/fourth_a" />

            <TextView
                android:id="@+id/fifth"
                style="@style/answers"
                android:text="@string/fifth_a" />

            <TextView
                android:id="@+id/sixth"
                style="@style/answers"
                android:text="@string/sixth_a" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>